<resources>
    <string name="app_name">MUNO_PDM</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="create_account_fragment_label">Creaza cont</string>
    <string name="edit_account_fragment_label">Editeaza cont</string>
    <string name="view_account_fragment_label">Contul meu</string>
    <string name="login_fragment_label">Login</string>
    <string name="create_product_fragment_label">Creaza un anunt</string>
    <string name="edit_product_fragment_label">Editeaza un anunt</string>
    <string name="view_product_fragment_label">Vizualizeaza un anunt</string>
    <string name="view_product_list_fragment_label">Anunturile mele</string>
    <string name="search_fragment_label">Cauta produse</string>
    <string name="settings_fragment_label">Setari</string>
    <string name="logout_fragment_label">Logout</string>
    <string name="admin_fragment_label">Admin</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- GENERAL STRINGS -->
    <string name="save">Salveaza</string>
    <string name="edit">Editeaza</string>
    <string name="delete">Sterge</string>

    <!-- ACCOUNT STRINGS -->
    <string name="email">Email</string>
    <string name="password">Parola</string>
    <string name="confirmPassword">Confirma parola</string>
    <string name="firstName">Prenume</string>
    <string name="lastName">Nume</string>
    <string name="phone">Telefon</string>
    <string name="login">Login</string>
    <string name="register">Creaza cont</string>
    <string name="city">Oras</string>
    <string name="county">Judet</string>
    <string name="user">UTILIZATOR</string>

    <!-- SEARCH STRINGS -->
    <string name="query">Ce produs doriti sa cautati?</string>

    <!-- PRODUCT STRINGS -->
    <string name="productName">Denumirea produsului</string>
    <string name="productDescription">Descrierea</string>
    <string name="productPrice">Pretul</string>
    <string name="productUnit">Unitatea de masura</string>

    <!-- SETTINGS STRINGS -->
    <string name="ip">IP</string>
</resources>