<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/loginFragment"
        android:title="@string/login_fragment_label" />
    <item
        android:id="@+id/createAccountFragment"
        android:title="@string/create_account_fragment_label" />
    <item
        android:id="@+id/searchFragment"
        android:title="@string/search_fragment_label" />
    <item
        android:id="@+id/createProductFragment"
        android:title="@string/create_product_fragment_label" />
    <item
        android:id="@+id/viewProductListFragment"
        android:title="@string/view_product_list_fragment_label" />
    <item
        android:id="@+id/viewAccountFragment"
        android:title="@string/view_account_fragment_label" />
    <item
        android:id="@+id/settingsFragment"
        android:title="@string/settings_fragment_label" />
    <item
        android:id="@+id/logoutFragment"
        android:title="@string/logout_fragment_label" />
</menu>